# toto

./: .gitignore  CLAUDE.md  LICENSE-3rdparty.csv  README.md  finetune_venezia.py  inspect_args.py  inspect_checkpoint.py  inspect_model_keys.py  load_finetuned_model.py  pyproject.toml  quick_test_venezia.py  requirements-nocpu.txt  requirements.txt  run_csv_test.py  simple_finetune.py  test_csv_data.py  test_venezia_finetuned.py  toto_forecast_function.py  train_with_config.py  training.py
.github/workflows/: black.yml  cpu-pytest.yml  cpu-tests.yml  cuda-tests.yml  mypy.yml
.run/: Train.run.xml  finetuning_venezia.run.xml  get_prevision.run.xml  run_venezia.run.xml
boom/: README.md  dataset_properties.json  dataset_properties_light.json
boom/breakdown_tabels/: domain_CRPS_shifted_gmean.csv  domain_MASE_shifted_gmean.csv  full_benchmark_CRPS_shifted_gmean.csv  full_benchmark_MASE_shifted_gmean.csv  real_term_CRPS_shifted_gmean.csv  real_term_MASE_shifted_gmean.csv  type_CRPS_shifted_gmean.csv  type_MASE_shifted_gmean.csv
boom/leaderboards/: boom_leaderboard.csv  boomlet_leaderboard.csv
boom/notebooks/: chronos.ipynb  leaderboard.ipynb  moirai.ipynb  seasonalnaive.ipynb  time-moe.ipynb  timer.ipynb  toto.ipynb  visualization.ipynb
data/: airlines.csv  temperature.csv
leaderboards/: full_leaderboard.csv  light_leaderboard.csv
results/autoarima/: all_results.csv
results/autoets/: all_results.csv
results/autotheta/: all_results.csv
results/chronos_bolt_base/: all_results.csv
results/time-moe/: all_results.csv
toto/: pyproject.toml  requirements.txt
(+41 files in other folders)
